<resources>
    <string name="account_banned_content">Account has been banned due to reasons. Please contact the Administrator to unlock your account.</string>
    <string name="account_banned_title">Account banned</string>
    <string name="account_locked_content">Account has been locked due to too many unsuccessful login attempts. Please contact the Administrator to unlock your account.</string>
    <string name="account_locked_title">Account locked</string>
    <string name="action_search">Search</string>
    <string name="admin">Admin</string>
    <string name="admin_controls">Admin Controls</string>
    <string name="app_logo_desc">Buzz Films logo</string>
    <string name="app_name">Buzz Films</string>
    <string name="app_text_desc">Buzz Films text</string>
    <string name="auth_progress_dialog_content">Authenticating user</string>
    <string name="auth_progress_dialog_title">Logging in…</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change password</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="critics_score">Critics Score</string>
    <string name="dashboard">Dashboard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit">Edit</string>
    <string name="edit_password_dialog_title">Enter a new password</string>
    <string name="edit_profile_dialog_title">Edit Profile</string>
    <string name="email">Email</string>
    <string name="email_hint">email</string>
    <string name="empty_search">No results!</string>
    <string name="filter_by_rating">Filter by Rating</string>
    <string name="interests">Interests</string>
    <string name="interests_hint">interests</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_login">Invalid login, please try again</string>
    <string name="leave_review_title">Leave review</string>
    <string name="leaving_review_as">Leaving review as</string>
    <string name="list_of_users">List of Users</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="major">Major</string>
    <string name="major_hint">major</string>
    <string name="major_not_specified">Not specified</string>
    <string name="major_recommendations_section_title">Major Recommendations</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_poster_desc">Movie poster</string>
    <string name="name">Name</string>
    <string name="name_hint">name</string>
    <string name="neat">Neat</string>
    <string name="need_to_register">Don\'t have an account? Create one</string>
    <string name="network_not_available">No network connection, please try again</string>
    <string name="new_password_confirm_hint">confirm new password</string>
    <string name="new_password_hint">new password</string>
    <string name="new_password_mismatch">Passwords do not match</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="okay">Okay</string>
    <string name="old_password_hint">old password</string>
    <string name="password_change_success">Password successfully changed</string>
    <string name="password_hint">password</string>
    <string name="password_incorrect">Incorrect password, please try again</string>
    <string name="profile">Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="ratings_recommendations_section_title">Highly Rated by Users</string>
    <string name="read_user_reviews">Read user reviews</string>
    <string name="recent_dvds_title">Recent DVDs</string>
    <string name="recent_movies_title">Recent Movies</string>
    <string name="recent_releases">Recent Releases</string>
    <string name="refresh">Refresh</string>
    <string name="register">Register</string>
    <string name="register_dialog_title">Create an account</string>
    <string name="register_username_taken">Username is taken</string>
    <string name="release_date">Release Date</string>
    <string name="review_submitted">Review submitted successfully!</string>
    <string name="save">Save</string>
    <string name="search_movie_hint">Search for a movie</string>
    <string name="settings">Settings</string>
    <string name="stars">stars</string>
    <string name="status">Status</string>
    <string name="status_active">Active</string>
    <string name="status_banned">Banned</string>
    <string name="status_locked">Locked</string>
    <string name="synopsis">Synopsis</string>
    <string name="title">Title</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_movie_poster">MoviePosterActivity</string>
    <string name="user_reviews">User reviews</string>
    <string name="username_hint">username</string>
</resources>
