<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:contentDescription="@string/app_logo_desc"
        android:src="@drawable/buzzfilms_app_logo"
        android:id="@+id/splash_logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="107dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:contentDescription="@string/app_text_desc"
        android:id="@+id/splash_text"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/secondary_text_dark"
        android:layout_marginBottom="92dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>