<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:text="@string/name" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/user_view_name"
        android:layout_height="wrap_content"
        android:text="Jack Daniels"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textColor="@color/accent"
        android:text="@string/email" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/user_view_email"
        android:layout_height="wrap_content"
        android:text="dummyemail@gmail.com"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textColor="@color/accent"
        android:text="@string/major" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_view_major"
        android:text="Computer Science"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:text="@string/status"
        android:paddingTop="16dp"
        android:id="@+id/textView3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Active"
        android:id="@+id/current_status" />
    <com.github.channguyen.rsv.RangeSliderView
        android:id="@+id/current_status_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingTop="16dp"
        app:rangeCount="3"
        app:filledColor="@color/accent"
        app:emptyColor="@color/primary_dark" />
</LinearLayout>