<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout_edit_name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/name_hint"
            android:ems="10"
            android:id="@+id/edit_name"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:layout_centerVertical="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="3dp"
        android:text="@string/major_hint"
        android:textColor="#a1a1a1"
        android:textSize="11sp" />

    <Spinner
        android:prompt="@string/major_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/major_dropdown"
        android:spinnerMode="dropdown" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout_edit_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:ems="10"
            android:id="@+id/edit_email"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:layout_centerVertical="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:id="@+id/textInputLayout_edit_interests">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoCorrect|textMultiLine|textCapSentences|textShortMessage"
            android:ems="10"
            android:id="@+id/edit_interests"
            android:layout_gravity="center"
            android:hint="@string/interests_hint"
            android:singleLine="false"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>