<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout_edit_password_old">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password_old"
            android:layout_gravity="center"
            android:hint="@string/old_password_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout_edit_password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password"
            android:layout_gravity="center"
            android:hint="@string/new_password_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout_edit_password_confirm">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password_confirm"
            android:layout_gravity="center"
            android:hint="@string/new_password_confirm_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>