<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="32dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:text="{Movie title here}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text_dark" />

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/release_date_icon"
                app:iiv_icon="gmd-date-range"
                app:iiv_color="@color/icons_dark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/release_date_icon"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_release_date"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/release_date_icon"
                android:text="@string/release_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text_dark" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/movie_critic_score_icon"
                app:iiv_icon="gmd-group"
                app:iiv_color="@color/icons_dark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/movie_critic_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/movie_critic_score_icon"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_critic_score"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/movie_critic_score_icon"
                android:text="@string/critics_score"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text_dark"
                android:id="@+id/textView" />

            <Button
                android:id="@+id/user_reviews_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/secondary_text_dark"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/read_user_reviews"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/movie_synopsis_icon"
                app:iiv_icon="gmd-description"
                app:iiv_color="@color/icons_dark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/movie_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/movie_synopsis_icon"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_synopsis"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/movie_synopsis_icon"
                android:text="@string/synopsis"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text_dark" />
        </RelativeLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>