<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_horizontal_margin"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/nameIcon"
                app:iiv_icon="gmd-person-outline"
                app:iiv_color="@color/icons_dark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/currentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/nameIcon"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/currentName"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/nameIcon"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text_dark" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/majorIcon"
                app:iiv_icon="gmd-school"
                app:iiv_color="@color/icons_dark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/currentMajor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/majorIcon"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/currentMajor"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/majorIcon"
                android:text="@string/major"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text_dark" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/emailIcon"
                app:iiv_icon="gmd-email"
                app:iiv_color="@color/icons_dark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/currentEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/emailIcon"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/currentEmail"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/emailIcon"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text_dark" />
        </RelativeLayout>

        <include layout="@layout/item_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/interestsIcon"
                app:iiv_icon="gmd-description"
                app:iiv_color="@color/icons_dark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/currentInterests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/interestsIcon"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/currentInterests"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/interestsIcon"
                android:text="@string/interests"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondary_text_dark" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>